[INJIWEB-1663] in dokcer compose file make changes to load json and template files as part of inji web service
Signed-off-by: PuBHARGAVI <46226958+PuBHARGAVI@users.noreply.github.com>

--- a/docker-compose/config/mimoto-default.properties
+++ b/docker-compose/config/mimoto-default.properties
@@ -356,7 +356,7 @@ spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_OAUTH_C
 # Defines the scopes requested during Google OAuth2 authentication, specifying the level of access required (e.g., profile and email)
 spring.security.oauth2.client.registration.google.scope=profile,email
 # Specifies the redirect URI for Google OAuth2 authentication callbacks, where Google sends the authorization response
-spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/oauth2/callback/{registrationId}
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8099/v1/mimoto/oauth2/callback/google
 # Defines the authorization grant type for Google OAuth2 authentication, indicating the flow used (e.g., authorization code)
 spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
 # Defines the human-readable name that will be displayed for the Google login option
