--- a/docker-compose/config/mimoto-default.properties
+++ b/docker-compose/config/mimoto-default.properties
@@ -161,7 +161,7 @@ mosip.kernel.xsdfile=mosip-cbeff.xsd
 
 
 #----------------------------- Applicant Type --------------------------------------------------
-mosip.kernel.applicant.type.age.limit = 5
+mosip.kernel.applicant.type.age.limit=5
 
 #----------------------------- Static PIN --------------------------------------------------
 mosip.kernel.pin.length=6
@@ -212,7 +212,7 @@ mosip.kernel.keymanager.certificate.default.country=IN
 # Specifies the driver class name for the PostgreSQL database, required for the application to interact with the database
 keymanager.persistence.jdbc.driver=org.postgresql.Driver
 # Specifies the JDBC URL for connecting to the PostgreSQL database, required to establish a connection to the inji_mimoto database
-keymanager_database_url = ${SPRING_DATASOURCE_URL}
+keymanager_database_url=${SPRING_DATASOURCE_URL}
 # Defines the password for accessing the PostgreSQL database, required for authentication
 keymanager_database_password=${POSTGRES_PASSWORD}
 # Defines the username for accessing the PostgreSQL database, required for authentication
@@ -313,9 +313,9 @@ mosip.inji.web.redirect.url=${mosip.inji.web.url}/authorize
 # If the data size exceeds 4096 characters (equivalent to 4KB), the 'pixel pass' library will fail to generate the QR code.
 mosip.inji.qr.data.size.limit=4096
 # Defines the height (in Pixels) of the generated QR code
-mosip.inji.qr.code.height=650
+mosip.inji.qr.code.height=400
 # Defines the width (in Pixels) of the generated QR code
-mosip.inji.qr.code.width=650
+mosip.inji.qr.code.width=400
 
 # Specifies the URL to redirect the user after successful authentication using Identity Provider(e.g., Goggle), pointing to the passcode page in Inji Web
 mosip.inji.web.authentication.success.redirect.url=${mosip.inji.web.url}/user/passcode
@@ -434,13 +434,13 @@ mosip.inji.app.id=MIMOTO
 
 #Caffeine cache related configurations
 # Cache expiry time in minutes for the issuer's well-known endpoint response.
-cache.credential-issuer.wellknown.expiry-time-in-min = 60
+cache.credential-issuer.wellknown.expiry-time-in-min=60
 # Cache expiry time in minutes for issuers configurations read from a config file.
-cache.issuers-config.expiry-time-in-min = 60
+cache.issuers-config.expiry-time-in-min=60
 # Cache expiry time in minutes for the authentication server's well-known endpoint response.
-cache.credential-issuer.authserver-wellknown.expiry-time-in-min = 60
+cache.credential-issuer.authserver-wellknown.expiry-time-in-min=60
 # Default cache expiry time in minutes for others cache types
-cache.default.expiry-time-in-min = 60
+cache.default.expiry-time-in-min=60
 
 # Wallet Passcode Configuration
 # Duration (in minutes) for which the wallet remains locked after exceeding failed attempts in a cycle.
@@ -451,5 +451,5 @@ wallet.passcode.maxFailedAttemptsAllowedPerCycle=5
 # Maximum number of lock cycles allowed before the wallet is permanently locked (defaults to 1 if <=0)
 wallet.passcode.maxLockCyclesAllowed=3
 
-#Signing Algorithms Priority Order Configuration
-signing.algorithms.priority.order = ED25519,ES256K,ES256,RS256
+# Signing Algorithms Priority Order Configuration
+signing.algorithms.priority.order=ED25519,ES256K,ES256,RS256
