--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       - active_profile_env=inji-default,standalone
       - SPRING_CONFIG_NAME=data-share
       - SPRING_CONFIG_LOCATION=/home/mosip/
+      - DATASHARE_DOMAIN=datashare-service:8097
     volumes:
       - ./config/data-share-inji-default.properties:/home/mosip/data-share-inji-default.properties
       - ./config/data-share-standalone.properties:/home/mosip/data-share-standalone.properties
