[INJIWEB-1639] make changes in the mimoto default property file and docker compose yml file to remove the dependency on the redis when running mimoto through docker compose and update the same in read me
Signed-off-by: PuBHARGAVI <46226958+PuBHARGAVI@users.noreply.github.com>

--- a/docker-compose/config/mimoto-default.properties
+++ b/docker-compose/config/mimoto-default.properties
@@ -395,21 +395,12 @@ spring.jpa.show-sql=true
 # Specifies the driver class name for the PostgreSQL database, required for the application to interact with the database.
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-#Redis configuration
-# Specifies the type of session store to use (Redis in this case)
-spring.session.store-type=redis
-# Defines the hostname of the Redis server
-spring.data.redis.host=${SPRING_REDIS_HOST}
-# Specifies the port number for the Redis server
-spring.data.redis.port=${SPRING_REDIS_PORT}
-# Sets the duration for which the application waits to establish a connection with the Redis server
-spring.data.redis.connect-timeout=10s
-# Specifies the duration the application waits for a response from Redis operations (e.g., setting or retrieving keys)
-spring.data.redis.timeout=10s
-# Specifies the duration of inactivity after which a user session in the Redis will expire
+# Http session cache configuration
+# Specifies which session store type to be used for storing http sessions in User Login flow
+spring.session.store-type=caffeine
+# Specifies the duration of inactivity after which a user session in configured session store (Ex: redis) will expire, ensuring session cleanup.
 server.servlet.session.timeout=30m
-# Specifies the namespace for Redis session keys.
-spring.session.redis.namespace=injiweb:session:
+
 # Configures the database dialect for Hibernate (PostgreSQL in this case).
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
@@ -432,7 +423,9 @@ registration.processor.print.textfile=registration-processor-print-text-file.jso
 # Application ID used for identifying and managing the Mimoto service keys in Key Manager service
 mosip.inji.app.id=MIMOTO
 
-#Caffeine cache related configurations
+# Cache related configurations
+# Specifies which cache type to use (e.g., caffeine, redis)
+spring.cache.type=caffeine
 # Cache expiry time in minutes for the issuer's well-known endpoint response.
 cache.credential-issuer.wellknown.expiry-time-in-min=60
 # Cache expiry time in minutes for issuers configurations read from a config file.
