[INJIWEB-1708] add arg and env variable for ignored issuer ids variable in docker file
Signed-off-by: PuBHARGAVI <46226958+PuBHARGAVI@users.noreply.github.com>

--- a/inji-web/Dockerfile
+++ b/inji-web/Dockerfile
@@ -11,6 +11,7 @@ ARG defaultLang
 ARG defaultFavicon
 ARG defaultTitle
 ARG MIMOTO_URL
+ARG IGNORED_ISSUER_IDS
 
 # Set environment variables
 ENV DEFAULT_THEME=$defaultTheme
@@ -18,6 +19,7 @@ ENV DEFAULT_LANG=$defaultLang
 ENV DEFAULT_FAVICON=$defaultFavicon
 ENV DEFAULT_TITLE=$defaultTitle
 ENV MIMOTO_URL=$MIMOTO_URL
+ENV IGNORED_ISSUER_IDS=$IGNORED_ISSUER_IDS
 
 # Copy package.json and package-lock.json to the working directory
 COPY package*.json ./
