[INJIWEB-1708] update the mimoto and inji-web images in docker compose yml file
Signed-off-by: PuBHARGAVI <46226958+PuBHARGAVI@users.noreply.github.com>

--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -48,7 +48,7 @@ services:
 
   mimoto-service:
     container_name: 'mimoto-service'
-    image: 'mosipdev/mimoto:develop'
+    image: 'mosipdev/mimoto:release-0.19.x'
     user: root
     ports:
       - "8099:8099"
@@ -77,7 +77,7 @@ services:
 
   inji-web:
     container_name: 'inji-web'
-    image: 'mosipdev/inji-web:develop'
+    image: 'mosipdev/inji-web:release-0.14.x'
     ports:
       - '3004:3004'
     environment:
