[MOSIP-42814] Updated helm chart and deployment scripts for Inji web uitestrig
Signed-off-by: Mohanraj209 <mohan1715@gmail.com>

--- a/.github/workflows/push-trigger.yml
+++ b/.github/workflows/push-trigger.yml
@@ -97,7 +97,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       NAMESPACE: ${{ secrets.dev_namespace_docker_hub }}
-      SERVICE_NAME: ui-test
+      SERVICE_NAME: uitest-web
       SERVICE_LOCATION: ui-test
       BUILD_ARTIFACT: ui-test-local
     steps:
