--- a/helm/inji-web/values.yaml
+++ b/helm/inji-web/values.yaml
@@ -51,8 +51,8 @@ service:
 
 image:
   registry: docker.io
-  repository: mosipdev/inji-web
-  tag: 0.14.x
+  repository: mosipid/inji-web
+  tag: 0.14.0
 
   ## Specify a imagePullPolicy
   ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
