--- a/.github/workflows/push-trigger.yml
+++ b/.github/workflows/push-trigger.yml
@@ -153,7 +153,7 @@ jobs:
       matrix:
         include:
           - SERVICE_LOCATION: 'ui-test'
-            SERVICE_NAME: 'ui-test'
+            SERVICE_NAME: 'uitest-web'
             BUILD_ARTIFACT: 'ui-test-local'
       fail-fast: false
     name: ${{ matrix.SERVICE_NAME }}
