--- a/helm/inji-web/values.yaml
+++ b/helm/inji-web/values.yaml
@@ -313,8 +313,8 @@ volumePermissions:
   enabled: false
   image:
     registry: docker.io
-    repository: bitnami/bitnami-shell
-    tag: "10"
+    repository: mosipint/os-shell
+    tag: "latest"
     pullPolicy: Always
     ## Optionally specify an array of imagePullSecrets.
     ## Secrets must be manually created in the namespace.
@@ -416,7 +416,7 @@ metrics:
 ## Slash is important!
 inji_web:
   inji_web_port: '3004'
-  inji_web_service_host: 'mimoto.mimoto'
+  inji_web_service_host: 'mimoto.injiweb'
   configmaps:
     injiweb-ui:
       DEFAULT_THEME: ''
