--- a/ui-test/src/main/resources/config/Kernel.properties
+++ b/ui-test/src/main/resources/config/Kernel.properties
@@ -180,28 +180,28 @@ db-server = released.mosip.net
 
 #------------------------ Keycloak Passwords ------------------------#
 # Used for Keycloak authentication.
-keycloak_Password =
+keycloak_Password = DyWRaJqTFh
 
 #------------------------ PostgreSQL Database Passwords ------------------------#
 # Credentials for connecting to Postgres databases.
-audit_password =
-partner_password = 
-postgres-password =
+audit_password = WfJpMctLjp
+partner_password = WfJpMctLjp
+postgres-password = WfJpMctLjp
 
 #-------- Client Secret Keys ----------#
 # These keys are used for various services, make sure to update the values as required when running locally.
 
-mosip_partner_client_secret =
-mosip_pms_client_secret = 
-mosip_resident_client_secret =
-mosip_idrepo_client_secret = 
-mosip_reg_client_secret =
-mosip_admin_client_secret = 
-mosip_hotlist_client_secret =
-mosip_regproc_client_secret = 
-mpartner_default_mobile_secret =
-mosip_testrig_client_secret = 
-AuthClientSecret =
+mosip_partner_client_secret = w6z9XQQ6Toi5vzzY
+mosip_pms_client_secret = 3XiMpmPfAAzT47EC
+mosip_resident_client_secret = MiTOjWLVoFZw3CHZ
+mosip_idrepo_client_secret = qKNTW5CTxKsgVGjw
+mosip_reg_client_secret = Msc7sItq6Rg8vcEC
+mosip_admin_client_secret = auWjWiniqX0YX8KF
+mosip_hotlist_client_secret = lA7pCSLknLvT9Owj
+mosip_regproc_client_secret = rR5eKHfG4i3BJf8S
+mpartner_default_mobile_secret = duo1HolnpqNc6aMA
+mosip_testrig_client_secret = G9qAJ3SrOm575GqL
+AuthClientSecret = 9U2kSoXQcrDGBk7i
 
 
 #-------- Generic Configuration ----------#
