--- a/ui-test/src/main/resources/config/injiweb.properties
+++ b/ui-test/src/main/resources/config/injiweb.properties
@@ -1,7 +1,7 @@
 #------------------------- DB Connectivity proprties ------------------------#
 #-- When test rig ran in docker,few of below dervied from the environment ---#
-apiEnvUser=api-internal.released
-apiInternalEndPoint=https://api-internal.released.mosip.net
+apiEnvUser=api-internal.qa-inji1
+apiInternalEndPoint=https://api-internal.qa-inji1.mosip.net
 injiWebUi=https://injiweb.qa-inji1.mosip.net/
 InsuranceUrl=https://registry.released.mosip.net/api/v1/Insurance
 actuatorMimotoEndpoint=/v1/mimoto/actuator/env
