[MOSIP-43087] Update docker-compose.yml/develop
Signed-off-by: Abhishek S <127825992+abhishek8shankar@users.noreply.github.com>

--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -4,7 +4,7 @@ services:
 
   minio:
     container_name: 'minio-service'
-    image: bitnami/minio:2022.2.7-debian-10-r0
+    image: mosipint/minio:2022.2.7-debian-10-r0
     ports:
       - "9001:9001"
       - "9000:9000"
