--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -77,7 +77,7 @@ services:
 
   inji-web:
     container_name: 'inji-web'
-    image: 'mosipid/inji-web:0.14.1'
+    image: 'mosipdev/inji-web:release-0.14.x'
     ports:
       - '3004:3004'
     environment:
