[INJIWEB-1715] - Add missing @testing-library/dom peer dependency - Fix LoadingModal test indentation consistency - Improve CredentialList fallback semantics and safe defaults - Implement missingClaims display in NoMatchingCredentialsModal - Add proper API error handling to prevent inconsistent state
Signed-off-by: kongadurgesh <kongadurgesh20@gmail.com>

--- a/inji-web/package.json
+++ b/inji-web/package.json
@@ -63,6 +63,7 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "resize-observer-polyfill": "^1.5.1"
