INJIWEB-1766:Optimize and reduce the overall execution time for InjiWeb UI automation
Signed-off-by: maheswaras <maheswara.s@cyberpwn.com>

--- a/ui-test/src/main/resources/config/injiweb.properties
+++ b/ui-test/src/main/resources/config/injiweb.properties
@@ -5,3 +5,6 @@ apiInternalEndPoint=https://api-internal.released.mosip.net
 injiWebUi=https://injiweb.qa-inji1.mosip.net/
 InsuranceUrl=https://registry.released.mosip.net/api/v1/Insurance
 actuatorMimotoEndpoint=/v1/mimoto/actuator/env
+dimensions=390,844
+maxAttempts=3
+threadCount=3
