[INJIWEB-1785] Update helm chart and docker-compose yaml config for release
Signed-off-by: jackjain <jackjain1995@gmail.com>

--- a/deploy/inji-web-uitestrig/values.yaml
+++ b/deploy/inji-web-uitestrig/values.yaml
@@ -21,7 +21,7 @@ modules:
     image:
       registry: docker.io
       repository: mosipqa/uitest-web
-      tag: develop
+      tag: 0.15.x
       pullPolicy: Always
 
 crontime: "0 3 * * *"    ## run cronjob every day at 3 AM (time hr: 0-23 )
