[DSD-9375] inji-web 0.15.0 release changes
Signed-off-by: Prafulrakhade <prafulrakhade02@gmail.com>

--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -41,7 +41,7 @@ services:
 
   mimoto-service:
     container_name: 'mimoto-service'
-    image: 'mosipqa/mimoto:0.15.x'
+    image: 'mosipid/mimoto:0.20.0'
     user: root
     ports:
       - "8099:8099"
@@ -67,7 +67,7 @@ services:
 
   inji-web:
     container_name: 'inji-web'
-    image: 'mosipqa/inji-web:0.15.x'
+    image: 'mosipid/inji-web:0.15.0'
     ports:
       - '3004:3004'
     environment:
