--- a/deploy/inji-web-uitestrig/values.yaml
+++ b/deploy/inji-web-uitestrig/values.yaml
@@ -20,8 +20,8 @@ modules:
     enabled: true
     image:
       registry: docker.io
-      repository: mosipqa/uitest-web
-      tag: 0.15.x
+      repository: mosipid/uitest-web
+      tag: 0.15.0
       pullPolicy: Always
 
 crontime: "0 3 * * *"    ## run cronjob every day at 3 AM (time hr: 0-23 )
